core/libycp/testsuite/tests/statements/Switch5.ycp
{
	integer res = 0;

	switch (res-1) {
		case "a": res = 0; break;	// error: invalid type
		default: res = -1; break;
	}
	return res;
}
